# Exchanger

./: README.md  common.hpp
Exchanger/: CMakeLists.txt  clickablelabel.cpp  clickablelabel.h  client.cpp  client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myquotes.cpp  myquotes.h  myquotes.ui  registrationwindow.cpp  registrationwindow.h  registrationwindow.ui
Server/: CMakeLists.txt  Server.cpp
